name:                LaaS
version:             0.1.0.0
synopsis:            LasS - Latex as a Sevice
-- description:         
homepage:            https://github.com/uvNikita/laas
license:             MIT
license-file:        LICENSE
author:              Nikita Uvarov
maintainer:          uv.nikita@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable Service
  main-is:             Service.hs
  build-depends:       base         >=4.6
                     , temporary    == 1.2.*
                     , daemons      == 0.2.*
                     , argparser    == 0.3.*
                     , data-default == 0.5.*
                     , cereal       == 0.4.*
                     , bytestring   == 0.10.*
                     , directory    == 1.2.*
                     , tar          == 0.4.*
                     , process      == 1.2.*
                     , filepath     == 1.3.*
  hs-source-dirs:      src
  default-language:    Haskell2010

executable Client
  main-is:             Client.hs
  build-depends:       base >=4.6
  hs-source-dirs:      src
  default-language:    Haskell2010
